[gd_scene load_steps=4 format=3 uid="uid://bvtc472n443kt"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_224kl"]
[ext_resource type="Theme" uid="uid://buyj7atvoig18" path="res://assets/ui/theme.tres" id="1_qsy5g"]
[ext_resource type="PackedScene" uid="uid://b8wfp2etl7cuf" path="res://assets/ui_sound.tscn" id="3_y1xxm"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_224kl")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
process_mode = 2
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -55.0
offset_right = 38.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsLayout" type="VBoxContainer" parent="CanvasLayer2/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Resume" type="Button" parent="CanvasLayer2/PanelContainer/ButtonsLayout"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_qsy5g")
text = "Resume"

[node name="Options" type="Button" parent="CanvasLayer2/PanelContainer/ButtonsLayout"]
layout_mode = 2
theme = ExtResource("1_qsy5g")
disabled = true
text = "Options"

[node name="Levels" type="Button" parent="CanvasLayer2/PanelContainer/ButtonsLayout"]
layout_mode = 2
theme = ExtResource("1_qsy5g")
disabled = true
text = "Levels"

[node name="Quit" type="Button" parent="CanvasLayer2/PanelContainer/ButtonsLayout"]
layout_mode = 2
theme = ExtResource("1_qsy5g")
text = "Quit"

[node name="UI_Sound" parent="." instance=ExtResource("3_y1xxm")]
root_path = NodePath("../CanvasLayer2/PanelContainer/ButtonsLayout")

[connection signal="pressed" from="CanvasLayer2/PanelContainer/ButtonsLayout/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer2/PanelContainer/ButtonsLayout/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer2/PanelContainer/ButtonsLayout/Levels" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer2/PanelContainer/ButtonsLayout/Quit" to="." method="_on_quit_pressed"]
